--- a/text_entry_page.html
+++ b/text_entry_page.html
@@ -5,123 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>画像テキスト入力</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
-            margin: 0;
-            padding: 20px;
-            overflow: hidden;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: row;
-            gap: 20px;
-        }
-
-        .text-entry {
-            flex: 1;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            max-width: 600px;
-        }
-
-        .image-container {
-            flex: 2;
-            position: relative;
-            overflow: hidden;
-            background-color: #ddd;
-            border-radius: 8px;
-            height: 80vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .image-container img {
-            position: absolute;
-            cursor: grab;
-            transition: transform 0.3s;
-            max-width: none;
-            max-height: none;
-            width: auto;
-            height: auto;
-        }
-
-        .image-container img:active {
-            cursor: grabbing;
-        }
-
-        .tabs {
-            display: flex;
-            justify-content: space-between;
-            border-bottom: 2px solid #ddd;
-            margin-bottom: 10px;
-        }
-
-        .tab {
-            padding: 10px;
-            cursor: pointer;
-            flex: 1;
-            text-align: center;
-            border: 1px solid #ddd;
-            border-bottom: none;
-            background-color: #f8f9fa;
-            transition: background-color 0.3s;
-        }
-
-        .tab.active {
-            background-color: #fff;
-            border-bottom: 2px solid #007bff;
-            font-weight: bold;
-        }
-
-        .tab-content {
-            display: none;
-        }
-
-        .tab-content.active {
-            display: block;
-        }
-
-        .input-group {
-            margin-bottom: 15px;
-        }
-
-        .input-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-
-        .input-group input, .input-group textarea {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-
-        .input-group textarea {
-            resize: vertical;
-            height: 100px;
-        }
-
-        .button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            border: none;
-            border-radius: 4px;
-            color: #fff;
-            background-color: #007bff;
-            transition: background-color 0.3s;
-        }
-
-        .button:hover {
-            background-color: #0056b3;
-        }
+        /* 既存のスタイル */
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; margin: 0; padding: 20px; overflow: hidden; }
+        .container { display: flex; flex-direction: row; gap: 20px; }
+        .text-entry { flex: 1; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1); padding: 20px; max-width: 600px; }
+        .image-container { flex: 2; position: relative; overflow: hidden; background-color: #ddd; border-radius: 8px; height: 80vh; display: flex; justify-content: center; align-items: center; }
+        .image-container img { position: absolute; cursor: grab; transition: transform 0.3s; max-width: none; max-height: none; width: auto; height: auto; }
+        .image-container img:active { cursor: grabbing; }
+        .tabs { display: flex; justify-content: space-between; border-bottom: 2px solid #ddd; margin-bottom: 10px; }
+        .tab { padding: 10px; cursor: pointer; flex: 1; text-align: center; border: 1px solid #ddd; border-bottom: none; background-color: #f8f9fa; transition: background-color 0.3s; }
+        .tab.active { background-color: #fff; border-bottom: 2px solid #007bff; font-weight: bold; }
+        .tab-content { display: none; }
+        .tab-content.active { display: block; }
+        .input-group { margin-bottom: 15px; }
+        .input-group label { display: block; margin-bottom: 5px; font-weight: bold; }
+        .input-group input, .input-group textarea { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; }
+        .input-group textarea { resize: vertical; height: 100px; }
+        .button { padding: 10px 20px; font-size: 16px; cursor: pointer; border: none; border-radius: 4px; color: #fff; background-color: #007bff; transition: background-color 0.3s; }
+        .button:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
@@ -182,14 +83,31 @@
         </div>
     </div>
 
-    <script>
+    <!-- Firebase SDK -->
+    <script type="module">
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js';
+        import { getFirestore, doc, setDoc, getDoc } from 'https://www.gstatic.com/firebasejs/9.15.0/firebase-firestore.js';
+
+        // Firebaseの設定情報
+        const firebaseConfig = {
+            apiKey: "AIzaSyDN9KQ50hwjlzFNc26aMOCS0H06JwggY68",
+            authDomain: "honkoku-hiroba-21400.firebaseapp.com",
+            projectId: "honkoku-hiroba-21400",
+            storageBucket: "honkoku-hiroba-21400.appspot.com",
+            messagingSenderId: "909469448032",
+            appId: "1:909469448032:web:8c62f7f2a978c711cd9005",
+        };
+
+        // Firebaseの初期化
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
         const image = document.getElementById('image');
+        const urlParams = new URLSearchParams(window.location.search);
+        const imageURL = urlParams.get('image');
         let isDragging = false;
         let startX, startY, initialLeft, initialTop;
         let scale = 1;
-
-        // ユーザー名の取得
-        const username = localStorage.getItem('username') || 'ゲスト';
 
         image.addEventListener('load', () => {
             image.style.transform = 'translate(0, 0) scale(1)';
@@ -250,32 +168,7 @@
             });
         });
 
-        const urlParams = new URLSearchParams(window.location.search);
-        const imageURL = urlParams.get('image');
-        if (imageURL) {
-            image.src = imageURL;
-
-            const savedData = JSON.parse(localStorage.getItem(imageURL)) || {};
-            document.getElementById('text-input').value = savedData.textInput || '';
-            document.getElementById('material-name').value = savedData.materialName || '';
-            document.getElementById('collection').value = savedData.collection || '';
-            document.getElementById('title').value = savedData.title || '';
-            document.getElementById('date').value = savedData.date || '';
-            document.getElementById('legend-input').value = savedData.legendInput || '';
-            document.getElementById('request-correction').checked = savedData.requestCorrection || false;
-
-            // 編集者履歴の表示
-            const historyContainer = document.getElementById('history');
-            if (savedData.history && savedData.history.length > 0) {
-                historyContainer.innerHTML = savedData.history.map(entry => `
-                    <div>
-                        <strong>${entry.username}</strong>: ${entry.text} (日時: ${new Date(entry.timestamp).toLocaleString()})
-                    </div>
-                `).join('');
-            }
-        }
-
-        const saveData = () => {
+        const saveData = async () => {
             const textInput = document.getElementById('text-input').value;
             const materialName = document.getElementById('material-name').value;
             const collection = document.getElementById('collection').value;
@@ -285,38 +178,56 @@
             const requestCorrection = document.getElementById('request-correction').checked || false;
 
             const historyEntry = {
-                username,
+                username: "ゲスト",
                 text: textInput,
                 timestamp: Date.now()
             };
 
-            const existingData = JSON.parse(localStorage.getItem(imageURL)) || {};
-            existingData.textInput = textInput;
-            existingData.materialName = materialName;
-            existingData.collection = collection;
-            existingData.title = title;
-            existingData.date = date;
-            existingData.legendInput = legendInput;
-            existingData.requestCorrection = requestCorrection;
-            existingData.history = existingData.history || [];
-            existingData.history.push(historyEntry);
+            const docRef = doc(db, "imageTextData", imageURL);
 
-            localStorage.setItem(imageURL, JSON.stringify(existingData));
+            const docData = {
+                textInput,
+                materialName,
+                collection,
+                title,
+                date,
+                legendInput,
+                requestCorrection,
+                history: historyEntry,
+            };
+
+            await setDoc(docRef, docData, { merge: true });
             alert('内容が保存されました。');
-            updateHistory();
+            loadHistory();
         };
 
-        const updateHistory = () => {
-            const savedData = JSON.parse(localStorage.getItem(imageURL)) || {};
-            const historyContainer = document.getElementById('history');
-            if (savedData.history && savedData.history.length > 0) {
-                historyContainer.innerHTML = savedData.history.map(entry => `
+        const loadHistory = async () => {
+            const docRef = doc(db, "imageTextData", imageURL);
+            const docSnap = await getDoc(docRef);
+
+            if (docSnap.exists()) {
+                const data = docSnap.data();
+                document.getElementById('text-input').value = data.textInput || '';
+                document.getElementById('material-name').value = data.materialName || '';
+                document.getElementById('collection').value = data.collection || '';
+                document.getElementById('title').value = data.title || '';
+                document.getElementById('date').value = data.date || '';
+                document.getElementById('legend-input').value = data.legendInput || '';
+                document.getElementById('request-correction').checked = data.requestCorrection || false;
+
+                const historyContainer = document.getElementById('history');
+                historyContainer.innerHTML = `
                     <div>
-                        <strong>${entry.username}</strong>: ${entry.text} (日時: ${new Date(entry.timestamp).toLocaleString()})
+                        <strong>${data.history.username}</strong>: ${data.history.text} (日時: ${new Date(data.history.timestamp).toLocaleString()})
                     </div>
-                `).join('');
+                `;
             }
         };
+
+        if (imageURL) {
+            image.src = imageURL;
+            loadHistory();
+        }
 
         document.getElementById('save-text-entry').addEventListener('click', saveData);
         document.getElementById('save-bibliography').addEventListener('click', saveData);
