--- a/text_entry_page.html
+++ b/text_entry_page.html
@@ -300,7 +300,7 @@
         document.getElementById('save-legend').addEventListener('click', saveData);
 
         document.getElementById('back-to-project').addEventListener('click', () => {
-            window.location.href = 'Project.html';
+            window.location.href = 'project.html';
         });
 
         onAuthStateChanged(auth, user => {
