--- a/text_entry_page.html
+++ b/text_entry_page.html
@@ -20,6 +20,7 @@
         }
 
         .text-entry {
+            font-size: 15px;
             flex: 1;
             background-color: #fff;
             border-radius: 8px;
@@ -165,8 +166,9 @@
 
 
 #text-input {
+    font-size: 20px;
         writing-mode: vertical-rl; /* 縦書きに設定 */
-        height: 350px; /* ボックスの高さを縦長に設定 */
+        height: 400px; /* ボックスの高さを縦長に設定 */
         width: 100%; /* 幅は100%に */
         padding: 8px;
         border: 1px solid #ddd;
@@ -236,10 +238,7 @@
         </div>
     </div>
 
-    <h2>タイムライン</h2>
-    <div id="timeline">
-        <!-- タイムラインの投稿がここに表示される -->
-    </div>
+    
 
     <!-- Firebase SDK -->
     <script type="module">
