--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>翻刻広場</title>
+    <title>みんなの活字化広場</title>
     <link rel="stylesheet" href="styles/style.css">
     <style>
         /* styles/style.css */
@@ -222,7 +222,7 @@
             <button class="nav-btn" onclick="location.href='//yuyawesleyan.github.io/archive-suzukieitarou/'">ホーム</button>
             <button class="nav-btn" onclick="location.href='call.html'">お問い合わせ</button>
             <button class="nav-btn" onclick="location.href='itsweb.html'">本WEBサイトについて</button>
-            <button class="nav-btn" onclick="location.href='index2.html'">管理者ログイン</button>
+            <button class="nav-btn" onclick="location.href='guide.html'">ご利用案内</button>
         </nav>
     </header>
     <div class="auth-buttons">
