--- a/login.html
+++ b/login.html
@@ -99,7 +99,9 @@ form button:hover {
             <input type="email" id="email" placeholder="メールアドレス" required>
             <input type="password" id="password" placeholder="パスワード" required>
             <button type="submit">ログイン</button>
+            <button class="nav-btn" onclick="location.href='index2.html'">管理者ログイン</button>
         </form>
+        
     </main>
     <script type="module">
         import { getAuth, signInWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js';
