--- a/itsweb.html
+++ b/itsweb.html
@@ -85,7 +85,7 @@
     
     <div id="greeting" class="content active">
         <h2>ごあいさつ</h2>
-        <p>こんにちは！このサイトにようこそ。私たちは楽しく、そしてみんながリラックスできるコンテンツを提供することを目指しています。気軽に楽しんでくださいね！
+        <p>
             2024年11月1日　みんなの活字化広場
         </p>
     </div>
@@ -106,7 +106,7 @@
     </div>
     
     <div id="credit" class="content">
-        <h2>クレジット（２０２４年度時点）</h2>
+        <h2>クレジット（２０２４年９月時点）</h2>
         <p>「みんなの活字化広場」は、長崎鎮西学院大学、吉野ゼミを中心に開発・運営されています。</p>
         <h3>監修・運営</h3>
         <p>吉野浩司（長崎鎮西学院大学　教授）</p>
