--- a/admin.html
+++ b/admin.html
@@ -159,8 +159,9 @@
                 <h2>管理機能</h2>
                 <a href="upload.html" class="link-button">原稿を投稿する</a>
                 <a href="latest-edits.html" class="link-button">最近の編集者確認</a>
-                <a href="admin_chat.html" class="link-button">個人チャットを開始する</a>
-                <a href="" class="link-button">一般ユーザー　一覧（現在開発中のため利用不可）</a>
+                
+                <a href="outputselect.html" class="link-button">データ出力 for PDF（現在開発中のため利用不可）</a>
+                <a href="" class="link-button">ユーザー　一覧（現在開発中のため利用不可）</a>
             </section>
             
             <section class="form-section">
