--- a/admin.html
+++ b/admin.html
@@ -152,7 +152,7 @@
             <section class="notifications">
                 <h2>お知らせ</h2>
                 <div id="notification-box">
-                    <p>テスト運用中です完全なWEBサイトではありません。2024/8/5PM22:47</p>
+                    <p>現在のWEBサイト完成進捗％は８０％です</p>
                 </div>
             </section>
             <section class="links">
