--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: #d3d59f;
         }
 
         header {
-            background-color: #090909;
-            color: rgb(255, 254, 254);
+            background-color: #f3e1ad;
+            color: rgb(14, 15, 14);
             width: 100%;
             text-align: center;
             padding: 20px 0;
@@ -80,21 +80,21 @@
         }
 
         .auth-buttons .register-btn {
-            background-color: #cbe00a;
+            background-color: #f07491;
             color: rgb(13, 12, 12);
         }
 
         .auth-buttons .register-btn:hover {
-            background-color: #a8c900;
+            background-color: #f07491;
         }
 
         .auth-buttons .login-btn {
-            background-color: #cbe00a;
+            background-color:#f07491 ;
             color: rgb(17, 15, 15);
         }
 
         .auth-buttons .login-btn:hover {
-            background-color: #a8c900;
+            background-color: #f07491;
         }
 
         main {
@@ -114,8 +114,8 @@
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 1rem;
-            width: 100%;
-            max-width: 600px;
+            width: 50%;
+            max-width: 100px;
             margin: 1rem;
         }
 
